# snapAnalysis

./: .gitattributes  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-package-check.yml  python-package.yml  test-pypi-publish.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: modules.rst  snapanalysis.rst
docs/source/tutorials/: 1_working_with_snapshots.ipynb  tutorials.rst
snapAnalysis/: __init__.py  sim.py  snap.py  utils.py
src/snapAnalysis/: __init__.py  snap.py  utils.py
src/snapanalysis/: __init__.py  orbit.py  sim.py  snap.py  utils.py  vis.py
tests/: conftest.py  snap_unit_test.py  test_io.py  test_orbit.py  test_orbit_workflow.py  test_sim.py  test_snap_methods.py  test_utils.py  test_visualizations.py
tests/example_snaps/: snap_001.hdf5
tests/example_snaps/cdm_snaps/: snap_000.hdf5
tests/example_snaps/fdm_snaps/: snap_000.hdf5
tutorials/: 2_working_with_simulations.ipynb
