[build-system]
requires = ["setuptools>61.0"]
build_backend = "setuptools.build_meta"

[project]
name = "snapAnalysis"
version = "0.0.1"
authors = [
  { name="Hayden R. Foote", email="haydenfoote@arizona.edu" },
]
description = "A package for analysis of gadget and arepo hdf5 snapshots."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0-only",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20",
    "astropy>=5.0",
	  "h5py>=3.7.0",
    "matplotlib>=3.8",
    "scipy>=1.11.4"
]

[project.urls]
Homepage = "https://github.com/hfoote/snapAnalysis"
Issues = "https://github.com/hfoote/snapAnalysis/issues"

[tool.ruff.lint]
select = ["E", "F"]