[project]
name = "snapanalysis"
version = "0.1.0"
description = "A package for analyzing N-body snapshots from Gadget and Arepo."
readme = "README.md"
authors = [
    { name = "hfoote", email = "haydenfoote@arizona.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=5.0",
    "h5py>=3.7.0",
    "matplotlib>=3.8",
    "numpy>=1.20,<2.0.0",
    "scipy>=1.11.4",
]

[project.scripts]
snapanalysis = "snapanalysis:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/hfoote/snapAnalysis"
Issues = "https://github.com/hfoote/snapAnalysis/issues"

[tool.ruff.lint]
select = ["E", "F"]

